# astal-rs

./: Cargo.toml  flake.nix
apps/: Cargo.toml  Gir.toml  TODOs.md
apps/src/: lib.rs
apps/src/auto/: application.rs  apps.rs  mod.rs  score.rs  versions.txt
apps/sys/: Cargo.toml  Gir.toml
apps/sys/src/: lib.rs
apps/sys/src/auto/: versions.txt
apps/sys/tests/: abi.rs  constant.c  layout.c  manual.h
astal/: Cargo.toml  Gir.toml
astal-io/: Cargo.toml  Gir.toml
astal-io/src/: lib.rs
astal-io/src/auto/: application.rs  daemon.rs  enums.rs  functions.rs  mod.rs  process.rs  time.rs  variable.rs  variable_base.rs  versions.txt
astal-io/src/subclass/: application.rs  mod.rs
astal-io/sys/: Cargo.toml  Gir.toml
astal-io/sys/src/: lib.rs
astal-io/sys/src/auto/: versions.txt
astal-io/sys/tests/: abi.rs  constant.c  layout.c
astal/astal-sys/: Gir.toml
astal/astal-sys/src/: lib.rs
astal/astal-sys/tests/: abi.rs  constant.c  layout.c
astal/src/: lib.rs
astal/src/auto/: application.rs  box_.rs  enums.rs  flags.rs  mod.rs  slider.rs  versions.txt  window.rs
astal/src/subclass/: application.rs  mod.rs  window.rs
astal/sys/: Cargo.toml  Gir.toml
astal/sys/src/: lib.rs
astal/sys/src/auto/: versions.txt
astal/sys/tests/: abi.rs  layout.c  manual.h
cava/: Cargo.toml  Gir.toml
cava/src/: cava.rs  lib.rs
cava/src/auto/: cava.rs  enums.rs  functions.rs  mod.rs
cava/sys/: Cargo.toml  Gir.toml
cava/sys/src/: lib.rs
cava/sys/tests/: abi.rs  constant.c  layout.c  manual.h
gir-astal/: Astal-4.0.gir  AstalApps-0.1.gir  AstalCava-0.1.gir  AstalIO-0.1.gir  AstalMpris-0.1.gir  AstalNotifd-0.1.gir  fixup-todos.md
mpris/: Cargo.toml  Gir.toml
mpris/src/: lib.rs
mpris/src/auto/: enums.rs  functions.rs  mod.rs  mpris.rs  player.rs  versions.txt
mpris/sys/: Cargo.toml  Gir.toml  build.rs
mpris/sys/src/: lib.rs
mpris/sys/src/auto/: versions.txt
mpris/sys/tests/: abi.rs  constant.c  layout.c  manual.h
notifd/: Cargo.toml  Gir.toml
notifd/src/: action.rs  lib.rs
notifd/src/auto/: action.rs  enums.rs  functions.rs  mod.rs  notifd.rs  notification.rs  versions.txt
notifd/sys/: Cargo.toml  Gir.toml
notifd/sys/src/: lib.rs
notifd/sys/src/auto/: versions.txt
notifd/sys/tests/: abi.rs  constant.c  layout.c  manual.h
