[workspace]
members = [
    "astal",
    "astal/sys",
    "astal-io",
    "astal-io/sys",
    "mpris",
    "mpris/sys",
    "cava",
    "cava/sys",
    "notifd",
    "notifd/sys",
    "apps",
    "apps/sys",
]
resolver = "2"

[workspace.package]
authors = ["Suyashtnt <suyashtnt@gmail.com>"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
libc = "0.2"
bitflags = "2.0"
gobject-sys = "0.20"
glib-sys = "0.20"
glib = "0.20"
gio = "0.20"
gio-sys = "0.20"
gdk-pixbuf-sys = "0.20"
gdk-pixbuf = "0.20"
gdk-sys = { package = "gdk4-sys", version = "0.9" }
gdk = { package = "gdk4", version = "0.9" }
gtk-sys = { package = "gtk4-sys", version = "0.9" }
gtk = { package = "gtk4", version = "0.9" }
system-deps = "7"
shell-words = "1.0"
tempfile = "3"
