[package]
name = "astal-apps"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
libc = "0.2"
bitflags.workspace = true
glib.workspace = true

[dependencies.ffi]
package = "astal-apps-sys"
path = "./sys"
