[package]
name = "astal-io"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
libc = "0.2"
bitflags.workspace = true
glib.workspace = true
gio.workspace = true

[dependencies.ffi]
package = "astal-io-sys"
path = "./sys"
