[package]
name = "astal"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
# For build.rs scripts
rustc-args = ["--cfg", "docsrs"]
# For rustdoc
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
libc = "0.2"
bitflags.workspace = true
glib.workspace = true
gdk.workspace = true
gtk.workspace = true
gio.workspace = true

[dependencies.ffi]
package = "astal-sys"
path = "./sys"

[dependencies.astal-io]
path = "../astal-io"
default-features = false

[features]
default = ["gio_v2_80", "gtk_v4_12"]
gio_v2_28 = ["astal-io/gio_v2_28"]
gio_v2_32 = ["gio_v2_28", "astal-io/gio_v2_32"]
gio_v2_80 = ["gio_v2_32", "gio/v2_80"]
gtk_v4_2 = ["gtk/v4_2"]
gtk_v4_6 = ["gtk_v4_2", "gtk/v4_6"]
gtk_v4_10 = ["gtk_v4_6", "gtk/v4_10"]
gtk_v4_12 = ["gtk_v4_10", "gtk/v4_12"]
