[package]
name = "astal-sys"
version = "0.0.1"
build = "build.rs"

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.metadata.system-deps.astal_4]
name = "astal-4-4.0"
version = "4"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "astal_sys"

[dependencies]
libc.workspace = true

gtk-sys.workspace = true
gdk-sys.workspace = true
gio-sys.workspace = true
glib-sys.workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v4 = []
